binrw/tests/ui/conflicting_keyword_bool.stderr
error: conflicting `restore_position` keyword
 --> $DIR/conflicting_keyword_bool.rs:6:28
  |
6 |     #[br(restore_position, restore_position)]
  |                            ^^^^^^^^^^^^^^^^
